force-app/main/default/objects/InformationRequest__c/InformationRequest__c.object-meta.xml
<CustomObject>
    <description>Used to track the process of gathering information for financial products</description>
    <label>Information Request</label>
    <nameField>
        <displayFormat>IR-{000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Information Requests</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>