force-app/main/default/objects/InformationRequest__c/fields/AdditionalInformationRequestStatus__c.field-meta.xml
<CustomField>
    <fullName>AdditionalInformationRequestStatus__c</fullName>
    <description>Status to track the progress of additional information needed</description>
    <label>Additional information request status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Not required</fullName>
            </value>
            <value>
                <fullName>Information requested</fullName>
            </value>
            <value>
                <fullName>Provider processing</fullName>
            </value>
            <value>
                <fullName>Received</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>