force-app/main/default/objects/InformationRequest__c/fields/Advice__c.field-meta.xml
<CustomField>
    <fullName>Advice__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The advice that requires this data request</description>
    <label>Advice</label>
    <referenceTo>Advice__c</referenceTo>
    <relationshipLabel>Information Requests</relationshipLabel>
    <relationshipName>InformationRequests</relationshipName>
    <type>Lookup</type>
</CustomField>