force-app/main/default/objects/InformationRequest__c/fields/AuthorityDocumentId__c.field-meta.xml
<CustomField>
    <fullName>AuthorityDocumentId__c</fullName>
    <description>For stamping the ID of the authority document generated</description>
    <label>Authority document ID</label>
    <length>100</length>
    <type>Text</type>
</CustomField>