force-app/main/default/objects/InformationRequest__c/fields/AuthorityLevel__c.field-meta.xml
<CustomField>
    <fullName>AuthorityLevel__c</fullName>
    <description>Indicates the level of authority we have been granted on this account</description>
    <label>Authority level</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Information only (LOA)</fullName>
            </value>
            <value>
                <fullName>Servicing agent (TOS)</fullName>
            </value>
            <value>
                <fullName>Client managed (None)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>