force-app/main/default/objects/InformationRequest__c/fields/AuthorityRequestSigned_by__c.field-meta.xml
<CustomField>
    <fullName>AuthorityRequestSigned_by__c</fullName>
    <description>Records who signed the authority letter</description>
    <label>Authority request signed by</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Client - TOB</fullName>
            </value>
            <value>
                <fullName>Client - by hand</fullName>
            </value>
            <value>
                <fullName>Annelise</fullName>
            </value>
            <value>
                <fullName>Hasan</fullName>
            </value>
            <value>
                <fullName>Liberty</fullName>
            </value>
            <value>
                <fullName>Naomi</fullName>
            </value>
            <value>
                <fullName>Narisa</fullName>
            </value>
            <value>
                <fullName>Sally</fullName>
            </value>
            <value>
                <fullName>Becky</fullName>
            </value>
            <value>
                <fullName>Hugo</fullName>
            </value>
            <value>
                <fullName>Jack F</fullName>
            </value>
            <value>
                <fullName>Ben</fullName>
            </value>
            <value>
                <fullName>Kayalvili</fullName>
            </value>
            <value>
                <fullName>Elliot</fullName>
            </value>
            <value>
                <fullName>Matthew</fullName>
            </value>
            <value>
                <fullName>Andrew</fullName>
            </value>
            <value>
                <fullName>Alex</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>