force-app/main/default/objects/InformationRequest__c/fields/AuthorityRequestSignedBy__c.field-meta.xml
<CustomField>
    <fullName>AuthorityRequestSignedBy__c</fullName>
    <description>Indicates who signed the authority document for this request</description>
    <inlineHelpText>Indicates who signed the authority document for this request</inlineHelpText>
    <label>Authority request signed by</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>CLIENT_TOB</fullName>
                <label>Client - TOB</label>
            </value>
            <value>
                <fullName>CLIENT_BY_HAND</fullName>
                <label>Client - by hand</label>
            </value>
            <value>
                <fullName>INTERNAL_USER</fullName>
                <label>Internal user</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>