force-app/main/default/objects/InformationRequest__c/fields/AuthorityRequestSignedByUser__c.field-meta.xml
<CustomField>
    <fullName>AuthorityRequestSignedByUser__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The internal user/colleague who signed the authority document for this information request</description>
    <inlineHelpText>The internal user/colleague who signed the authority document for this information request</inlineHelpText>
    <label>Authority request signed by</label>
    <referenceTo>User</referenceTo>
    <relationshipName>InformationRequestsSigned</relationshipName>
    <type>Lookup</type>
</CustomField>