force-app/main/default/objects/InformationRequest__c/fields/AuthorityStatus__c.field-meta.xml
<CustomField>
    <fullName>AuthorityStatus__c</fullName>
    <description>Indicates the progress of our authority on this plan</description>
    <label>Authority status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>To be requested</fullName>
            </value>
            <value>
                <fullName>Processing</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
            <value>
                <fullName>Accepted</fullName>
            </value>
            <value>
                <fullName>Not required</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>