force-app/main/default/objects/InformationRequest__c/fields/BuilderCompleteDate__c.field-meta.xml
<CustomField>
    <fullName>BuilderCompleteDate__c</fullName>
    <description>The date the suitability builder was completed</description>
    <label>Builder complete date</label>
    <type>Date</type>
</CustomField>