force-app/main/default/objects/InformationRequest__c/fields/BuilderCompletedBy__c.field-meta.xml
<CustomField>
    <fullName>BuilderCompletedBy__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The specialist who completed the suitability builder for this account</description>
    <label>Builder completed by</label>
    <referenceTo>User</referenceTo>
    <relationshipName>InformationRequestsBuilder</relationshipName>
    <type>Lookup</type>
</CustomField>