force-app/main/default/objects/InformationRequest__c/fields/BuilderLink__c.field-meta.xml
<CustomField>
    <fullName>BuilderLink__c</fullName>
    <description>The link to the suitability builder</description>
    <label>Builder link</label>
    <type>Url</type>
</CustomField>