force-app/main/default/objects/InformationRequest__c/fields/ChecklistCompleteDate__c.field-meta.xml
<CustomField>
    <fullName>ChecklistCompleteDate__c</fullName>
    <description>The date the checklist was completed</description>
    <label>Checklist complete date</label>
    <type>Date</type>
</CustomField>