force-app/main/default/objects/InformationRequest__c/fields/ChecklistCompletedBy__c.field-meta.xml
<CustomField>
    <fullName>ChecklistCompletedBy__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The user who completed the information checklist</description>
    <label>Checklist completed by</label>
    <referenceTo>User</referenceTo>
    <relationshipName>InformationRequestsChecklists</relationshipName>
    <type>Lookup</type>
</CustomField>