force-app/main/default/objects/InformationRequest__c/fields/ChecklistPlatformId__c.field-meta.xml
<CustomField>
    <fullName>ChecklistPlatformId__c</fullName>
    <description>The platform id for the checklist record in the database.</description>
    <label>Checklist Platform Id</label>
    <length>36</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>