force-app/main/default/objects/InformationRequest__c/fields/ChecklistStatus__c.field-meta.xml
<CustomField>
    <fullName>ChecklistStatus__c</fullName>
    <description>The progress of the policy checklist</description>
    <label>Checklist status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Not required</fullName>
            </value>
            <value>
                <fullName>Not started</fullName>
            </value>
            <value>
                <fullName>In progress</fullName>
            </value>
            <value>
                <fullName>Awaiting additional information</fullName>
            </value>
            <value>
                <fullName>Complete</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>