force-app/main/default/objects/InformationRequest__c/fields/ComplaintStatus__c.field-meta.xml
<CustomField>
    <fullName>ComplaintStatus__c</fullName>
    <description>Used to track whether a complaint was made during the process of this data request</description>
    <label>Complaint status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Lodged</fullName>
            </value>
            <value>
                <fullName>Resolved</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>