force-app/main/default/objects/InformationRequest__c/fields/CompleteDate__c.field-meta.xml
<CustomField>
    <fullName>CompleteDate__c</fullName>
    <description>The date the checklist is complete</description>
    <label>Complete date</label>
    <type>Date</type>
</CustomField>