force-app/main/default/objects/InformationRequest__c/fields/DateAuthorityGranted__c.field-meta.xml
<CustomField>
    <fullName>DateAuthorityGranted__c</fullName>
    <description>The date the provider granted us authority on this plan</description>
    <label>Date authority granted</label>
    <type>Date</type>
</CustomField>