force-app/main/default/objects/InformationRequest__c/fields/DateInformationRequestSent__c.field-meta.xml
<CustomField>
    <fullName>DateInformationRequestSent__c</fullName>
    <description>The date we sent our information request to the third party provider</description>
    <label>Date information request sent</label>
    <type>Date</type>
</CustomField>