force-app/main/default/objects/InformationRequest__c/fields/DateLastChased__c.field-meta.xml
<CustomField>
    <fullName>DateLastChased__c</fullName>
    <description>The date information for this policy was last chased</description>
    <label>Date last chased</label>
    <type>Date</type>
</CustomField>