force-app/main/default/objects/InformationRequest__c/fields/ExpectedReceiptDate__c.field-meta.xml
<CustomField>
    <fullName>ExpectedReceiptDate__c</fullName>
    <description>The date we currently expect to receive information by</description>
    <label>Date information expected</label>
    <type>Date</type>
</CustomField>