force-app/main/default/objects/InformationRequest__c/fields/FeeEvidenceLink__c.field-meta.xml
<CustomField>
    <fullName>FeeEvidenceLink__c</fullName>
    <description>Used to store the link to fee evidence that is shown in Comet</description>
    <label>Fee evidence link</label>
    <type>Url</type>
</CustomField>