force-app/main/default/objects/InformationRequest__c/fields/FeeNotes__c.field-meta.xml
<CustomField>
    <fullName>FeeNotes__c</fullName>
    <description>Used to store fee notes that are shown in Comet</description>
    <label>Fee notes</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>