force-app/main/default/objects/InformationRequest__c/fields/FinancialProduct__c.field-meta.xml
<CustomField>
    <fullName>FinancialProduct__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Lookup to the config data record for this type of financial product</description>
    <label>Financial product</label>
    <referenceTo>FinancialProduct__c</referenceTo>
    <relationshipLabel>Information Requests</relationshipLabel>
    <relationshipName>Information_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>