force-app/main/default/objects/InformationRequest__c/fields/FinancialProductFinServ__c.field-meta.xml
<CustomField>
    <fullName>FinancialProductFinServ__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>The financial product that this information request is for</description>
    <label>Financial product</label>
    <referenceTo>FinServ__FinancialAccount__c</referenceTo>
    <relationshipLabel>Information Requests</relationshipLabel>
    <relationshipName>InformationRequests</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>