force-app/main/default/objects/InformationRequest__c/fields/FirstExpectedReceiptDate__c.field-meta.xml
<CustomField>
    <fullName>FirstExpectedReceiptDate__c</fullName>
    <description>This is the first date that a provider gives us for when we should expect to receive information for this policy</description>
    <label>First date information expected</label>
    <type>Date</type>
</CustomField>