force-app/main/default/objects/InformationRequest__c/fields/FolderLink__c.field-meta.xml
<CustomField>
    <fullName>FolderLink__c</fullName>
    <description>Temporary field to ensure specialists can easily access the folder for this policy before all drive naviagtion is done via salesforce.</description>
    <label>Folder link</label>
    <type>Url</type>
</CustomField>