force-app/main/default/objects/InformationRequest__c/fields/FundReviewStatus__c.field-meta.xml
<CustomField>
    <fullName>FundReviewStatus__c</fullName>
    <description>Indicates the progress of the fund review for this policy</description>
    <label>Fund review status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Not required</fullName>
            </value>
            <value>
                <fullName>Not started</fullName>
            </value>
            <value>
                <fullName>In progress</fullName>
            </value>
            <value>
                <fullName>Awaiting review</fullName>
            </value>
            <value>
                <fullName>Complete</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>