force-app/main/default/objects/InformationRequest__c/fields/GoogleDriveFolderId__c.field-meta.xml
<CustomField>
    <fullName>GoogleDriveFolderId__c</fullName>
    <description>For the folder that the authority document/information requests will sit in</description>
    <label>Google Drive folder ID</label>
    <length>100</length>
    <type>Text</type>
</CustomField>