force-app/main/default/objects/InformationRequest__c/fields/InformationReceivedVia__c.field-meta.xml
<CustomField>
    <fullName>InformationReceivedVia__c</fullName>
    <description>Indicates the method with which we either expect or have information received via</description>
    <label>Information received via</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Post</fullName>
            </value>
            <value>
                <fullName>Email</fullName>
            </value>
            <value>
                <fullName>Portal</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>