force-app/main/default/objects/InformationRequest__c/fields/InformationRequestSentBy__c.field-meta.xml
<CustomField>
    <fullName>InformationRequestSentBy__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The user who sent the information request to the third party provider</description>
    <label>Information request sent by</label>
    <referenceTo>User</referenceTo>
    <relationshipName>InformationRequests</relationshipName>
    <type>Lookup</type>
</CustomField>