force-app/main/default/objects/InformationRequest__c/fields/InformationRequestSentVia__c.field-meta.xml
<CustomField>
    <fullName>InformationRequestSentVia__c</fullName>
    <description>Records through which method the authority request was sent to the provider</description>
    <label>Information request sent via</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Email</fullName>
            </value>
            <value>
                <fullName>Post</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>