force-app/main/default/objects/InformationRequest__c/fields/InformationRequestStatus__c.field-meta.xml
<CustomField>
    <fullName>InformationRequestStatus__c</fullName>
    <description>Indicates the progress of our information request</description>
    <label>Information request status</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>AuthorityLevel__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>To be sent</fullName>
            </value>
            <value>
                <fullName>Sent to client</fullName>
            </value>
            <value>
                <fullName>Sent to provider</fullName>
            </value>
            <value>
                <fullName>Processing</fullName>
            </value>
            <value>
                <fullName>On the way</fullName>
            </value>
            <value>
                <fullName>Received</fullName>
            </value>
            <value>
                <fullName>Not required</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>