force-app/main/default/objects/InformationRequest__c/fields/InformationRequestType__c.field-meta.xml
<CustomField>
    <fullName>InformationRequestType__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>The type of information request process needed</description>
    <label>Information Request Type</label>
    <referenceTo>InformationRequestType__c</referenceTo>
    <relationshipLabel>Information Requests</relationshipLabel>
    <relationshipName>InformationRequests</relationshipName>
    <type>Lookup</type>
</CustomField>