force-app/main/default/objects/InformationRequest__c/fields/LegacyLoa__c.field-meta.xml
<CustomField>
    <fullName>LegacyLoa__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>If this data request was created by converting an LOA, this will contain a lookup to that LOA</description>
    <label>Legacy LOA</label>
    <referenceTo>LOA__c</referenceTo>
    <relationshipLabel>Information Requests</relationshipLabel>
    <relationshipName>InformationRequests</relationshipName>
    <type>Lookup</type>
</CustomField>