force-app/main/default/objects/InformationRequest__c/fields/PlatformId__c.field-meta.xml
<CustomField>
    <fullName>PlatformId__c</fullName>
    <description>Identify record in Nova service</description>
    <externalId>true</externalId>
    <label>Platform Id</label>
    <length>36</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>