force-app/main/default/objects/InformationRequest__c/fields/PlatformLastModifiedDateTime__c.field-meta.xml
<CustomField>
    <fullName>PlatformLastModifiedDateTime__c</fullName>
    <description>Used to store the date and time of the last edit</description>
    <label>Platform Last Modified Date Time</label>
    <type>DateTime</type>
</CustomField>