force-app/main/default/objects/InformationRequest__c/fields/PreviousStatus__c.field-meta.xml
<CustomField>
    <fullName>PreviousStatus__c</fullName>
    <description>Used when status is in ad hoc action to indicate which status to go back to once action complete</description>
    <label>Previous status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>