force-app/main/default/objects/InformationRequest__c/fields/PreviousTask__c.field-meta.xml
<CustomField>
    <fullName>PreviousTask__c</fullName>
    <description>Used in the ad hoc action flow</description>
    <label>Previous task</label>
    <length>255</length>
    <type>Text</type>
</CustomField>