force-app/main/default/objects/InformationRequest__c/fields/ProviderContact__c.field-meta.xml
<CustomField>
    <fullName>ProviderContact__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>The contact details for the third party provider of this product</description>
    <label>Provider contact</label>
    <referenceTo>ProviderContact__c</referenceTo>
    <relationshipLabel>Information Requests</relationshipLabel>
    <relationshipName>InformationRequests</relationshipName>
    <type>Lookup</type>
</CustomField>