force-app/main/default/objects/InformationRequest__c/fields/ProviderSecret__c.field-meta.xml
<CustomField>
    <fullName>ProviderSecret__c</fullName>
    <description>Use this field to capture any information the provider has asked us to quote in relation to a particular product. For example, a PIN, policy reference etc.</description>
    <inlineHelpText>Use this field to capture any information the provider has asked us to quote in relation to a particular product. For example, a PIN, policy reference etc.</inlineHelpText>
    <label>Provider secret</label>
    <length>255</length>
    <type>Text</type>
</CustomField>