force-app/main/default/objects/InformationRequest__c/fields/QualityIssues__c.field-meta.xml
<CustomField>
    <fullName>QualityIssues__c</fullName>
    <description>High level description of any issues with this information request</description>
    <label>Quality issues</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Incorrect fees</fullName>
            </value>
            <value>
                <fullName>Missed guarantees</fullName>
            </value>
            <value>
                <fullName>Spelling mistakes</fullName>
            </value>
            <value>
                <fullName>Missing data</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>