force-app/main/default/objects/InformationRequest__c/fields/QualityLevel__c.field-meta.xml
<CustomField>
    <fullName>QualityLevel__c</fullName>
    <description>A RAG status to indicate the quality of the checklist review completed by specialists. If blank, this is an implicit indication of Green/High quality.</description>
    <label>Quality level</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>RED</fullName>
                <label>Red</label>
            </value>
            <value>
                <fullName>AMBER</fullName>
                <label>Amber</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>