force-app/main/default/objects/InformationRequest__c/fields/QualityNotes__c.field-meta.xml
<CustomField>
    <fullName>QualityNotes__c</fullName>
    <description>Further notes on the quality of this information request</description>
    <label>Quality notes</label>
    <length>1000</length>
    <type>Html</type>
</CustomField>