force-app/main/default/objects/InformationRequest__c/fields/QualityReviewBy__c.field-meta.xml
<CustomField>
    <fullName>QualityReviewBy__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The user who scored this information request</description>
    <inlineHelpText>This is the person who last updated the review for this checklist</inlineHelpText>
    <label>Quality review by</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Information_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>