force-app/main/default/objects/InformationRequest__c/fields/ReasonForCancellation__c.field-meta.xml
<CustomField>
    <fullName>ReasonForCancellation__c</fullName>
    <description>A reason why this information request was cancelled</description>
    <label>Reason for cancellation</label>
    <type>TextArea</type>
</CustomField>