force-app/main/default/objects/InformationRequest__c/fields/ReceivedDate__c.field-meta.xml
<CustomField>
    <fullName>ReceivedDate__c</fullName>
    <description>The date that information is received</description>
    <label>Date information received</label>
    <type>Date</type>
</CustomField>