force-app/main/default/objects/InformationRequest__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <description>Indicates the overall progression of the data gathering process for this policy</description>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Setup</fullName>
            </value>
            <value>
                <fullName>Awaiting policy pre-requisites</fullName>
            </value>
            <value>
                <fullName>Awaiting advice progression</fullName>
            </value>
            <value>
                <fullName>Information request to be sent</fullName>
            </value>
            <value>
                <fullName>Awaiting initial information</fullName>
            </value>
            <value>
                <fullName>Checklist review</fullName>
            </value>
            <value>
                <fullName>Fund analysis</fullName>
            </value>
            <value>
                <fullName>Complete</fullName>
            </value>
            <value>
                <fullName>Cancelled</fullName>
            </value>
            <value>
                <fullName>Awaiting ad hoc action</fullName>
            </value>
            <value>
                <fullName>Additional checklist review</fullName>
                <isActive>false</isActive>
                <label>Additional checklist review</label>
            </value>
            <value>
                <fullName>Awaiting additional information</fullName>
                <isActive>false</isActive>
                <label>Awaiting additional information</label>
            </value>
            <value>
                <fullName>Awaiting approval</fullName>
                <isActive>false</isActive>
                <label>Awaiting approval</label>
            </value>
            <value>
                <fullName>Closed</fullName>
                <isActive>false</isActive>
                <label>Closed</label>
            </value>
            <value>
                <fullName>Open</fullName>
                <isActive>false</isActive>
                <label>Open</label>
            </value>
            <value>
                <fullName>Waiting for provider</fullName>
                <isActive>false</isActive>
                <label>Waiting for provider</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>