force-app/main/default/objects/InformationRequest__c/fields/TempTaskDueDate__c.field-meta.xml
<CustomField>
    <fullName>TempTaskDueDate__c</fullName>
    <description>A temporary field to track task due date through conversion from LOAs</description>
    <label>Temporary task due date</label>
    <type>Date</type>
</CustomField>