force-app/main/default/objects/InformationRequest__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Status__c</columns>
    <columns>InformationRequestType__c</columns>
    <columns>FinancialProductFinServ__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>